<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.github.florent37.expansionpanel.ExpansionHeader
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:expansion_headerIndicator="@id/headerPermission"
        app:expansion_layout="@id/expansionPermission"
        app:expansion_toggleOnClick="true">

        <!-- HEADER -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_complete_setup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.8"
                android:gravity="start|center"
                android:minHeight="48dp"
                app:drawableStartCompat="@drawable/ic_baseline_settings_24"
                app:drawableTint="?attr/colorOnSurface"
                android:drawablePadding="4dp"
                android:text="@string/title_finish_setup"
                android:textColor="?attr/colorPrimary" />

            <!-- HEADER INDICATOR -->
            <ImageView
                android:id="@+id/headerPermission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/ic_expansion_header_indicator_grey_24sp" />

        </LinearLayout>


    </com.github.florent37.expansionpanel.ExpansionHeader>

    <com.github.florent37.expansionpanel.ExpansionLayout
        android:id="@+id/expansionPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="?attr/colorOnSecondary"
                android:text="@string/text_explained_how_works"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/text_tip_restart"
                android:textAlignment="center" />

            <Button
                android:id="@+id/buttonPermission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"
                android:text="@string/text_request_permission" />

        </LinearLayout>

    </com.github.florent37.expansionpanel.ExpansionLayout>

</LinearLayout>