<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.github.florent37.expansionpanel.ExpansionHeader
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:expansion_headerIndicator="@id/headerLyricProvider"
        app:expansion_layout="@id/expansionLyricProvider"
        app:expansion_toggleOnClick="true">

        <!-- HEADER -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.8"
                android:gravity="start|center"
                android:minHeight="48dp"
                android:text="@string/title_expansion_panel_lyric_provider"
                android:textColor="?attr/colorPrimary"
                app:drawableStartCompat="@drawable/ic_outline_info_24"
                app:drawableTint="?attr/colorOnSurface"
                android:drawablePadding="4dp"/>

            <!-- HEADER INDICATOR -->
            <ImageView
                android:id="@+id/headerLyricProvider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/ic_expansion_header_indicator_grey_24sp" />

        </LinearLayout>


    </com.github.florent37.expansionpanel.ExpansionHeader>

    <com.github.florent37.expansionpanel.ExpansionLayout
        android:id="@+id/expansionLyricProvider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/lyricsProvider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="?attr/colorOnSecondary"
                android:text="@string/text_info_lyrics_provided"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="?attr/colorOnSecondary"
                android:text="@string/text_info_vagalume_lyric"
                android:textAlignment="center" />

        </LinearLayout>

    </com.github.florent37.expansionpanel.ExpansionLayout>

</LinearLayout>